add ExplodeTool